--- a/Polars.ipynb
+++ b/Polars.ipynb
@@ -77,12 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "ac718211-e539-435b-8325-1b1dea49a0ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# flights --- https://github.com/kevinheavey/modern-polars/blob/master/data/flights.csv.zip"
+    "# flights --- https://github.com/kevinheavey/modern-polars/blob/master/data/flights.csv.zip\n",
+    "# diamonds -- 'https://raw.githubusercontent.com/pycaret/pycaret/master/datasets/diamond.csv'"
    ]
   },
   {
@@ -441,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.read_csv('data/diamonds.csv')\n",
+    "df = pl.read_csv('https://raw.githubusercontent.com/pycaret/pycaret/master/datasets/diamond.csv')\n",
     "df"
    ]
   },
@@ -617,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.read_csv('data/diamonds.csv')"
+    "df = pl.read_csv('https://raw.githubusercontent.com/pycaret/pycaret/master/datasets/diamond.csv')"
    ]
   },
   {
